--- a/android/app/src/main/res/layout/activity_welcome.xml
+++ b/android/app/src/main/res/layout/activity_welcome.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.pokeme.WelcomeActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/login_btn"
+        android:layout_width="150dp"
+        android:layout_height="89dp"
+        android:onClick="openLoginActivity"
+        android:text="@string/login_btn"
+        tools:layout_editor_absoluteX="117dp"
+        tools:layout_editor_absoluteY="51dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/signup_btn"
+        android:layout_width="155dp"
+        android:layout_height="85dp"
+        android:onClick="openSignupActivity"
+        android:text="@string/signup_btn"
+        tools:layout_editor_absoluteX="115dp"
+        tools:layout_editor_absoluteY="213dp" />
+</LinearLayout>
