--- a/android/app/src/main/res/layout/activity_welcome.xml
+++ b/android/app/src/main/res/layout/activity_welcome.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="false"
+    android:scrollbars="vertical"
     tools:context="com.pokeme.WelcomeActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center">
 
     <Button
         android:id="@+id/login_btn"
@@ -25,4 +32,5 @@
         android:text="@string/signup_btn"
         tools:layout_editor_absoluteX="115dp"
         tools:layout_editor_absoluteY="213dp" />
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
