--- a/android/app/src/main/res/layout/activity_welcome.xml
+++ b/android/app/src/main/res/layout/activity_welcome.xml
@@ -1,36 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="false"
     android:scrollbars="vertical"
-    tools:context="com.pokeme.WelcomeActivity">
+    tools:context="com.pokeme.WelcomeActivity"
+    android:orientation="horizontal">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:title="@string/app_name"
+        app:titleTextColor="#fff" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/login_btn"
-        android:layout_width="150dp"
-        android:layout_height="89dp"
-        android:onClick="openLoginActivity"
-        android:text="@string/login_btn"
-        tools:layout_editor_absoluteX="117dp"
-        tools:layout_editor_absoluteY="51dp" />
+        <Button
+            android:id="@+id/login_btn"
+            android:layout_width="150dp"
+            android:layout_height="89dp"
+            android:onClick="openLoginActivity"
+            android:text="@string/login_btn"
+            tools:layout_editor_absoluteX="117dp"
+            tools:layout_editor_absoluteY="51dp" />
 
-    <Button
-        android:id="@+id/signup_btn"
-        android:layout_width="155dp"
-        android:layout_height="85dp"
-        android:onClick="openSignupActivity"
-        android:text="@string/signup_btn"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="213dp" />
+        <Button
+            android:id="@+id/signup_btn"
+            android:layout_width="155dp"
+            android:layout_height="85dp"
+            android:onClick="openSignupActivity"
+            android:text="@string/signup_btn"
+            tools:layout_editor_absoluteX="115dp"
+            tools:layout_editor_absoluteY="213dp" />
     </LinearLayout>
-</ScrollView>
+</RelativeLayout>
