--- a/android/app/src/main/res/layout/activity_dashboard.xml
+++ b/android/app/src/main/res/layout/activity_dashboard.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="true">
 
     <LinearLayout
-        android:id="@+id/content_frame"
+        android:id="@+id/content_layout"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent">
@@ -19,20 +19,10 @@
             android:background="@color/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
-        <!-- Tab layout to display tabs -->
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabLayout"
+        <FrameLayout
+            android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
-
-        <!-- View pager to swipe views -->
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
