--- a/android/app/src/main/res/layout/fragment_create_note.xml
+++ b/android/app/src/main/res/layout/fragment_create_note.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pokeme.CreateNoteFragment">
+    tools:context="com.pokeme.fragments.CreateNoteFragment">
 
     <TextView
         android:layout_width="match_parent"
