--- a/android/app/src/main/res/layout/fragment_list.xml
+++ b/android/app/src/main/res/layout/fragment_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context="com.pokeme.ListFragment">
+    tools:context="com.pokeme.fragments.ListFragment">
 
     <!-- Tab layout to display tabs -->
     <android.support.design.widget.TabLayout
