--- a/android/app/src/main/res/layout/fragment_create_note.xml
+++ b/android/app/src/main/res/layout/fragment_create_note.xml
@@ -1,12 +1,47 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.pokeme.fragments.CreateNoteFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:layout_gravity="center"
+android:gravity="center"
+android:orientation="vertical"
+tools:context="com.pokeme.fragments.CreateNoteFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Create Note" />
+<EditText
+    android:id="@+id/txtNoteTitle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:ems="10"
+    android:hint="@string/note_name"
+    android:inputType="textPersonName" />
 
-</FrameLayout>
+
+<EditText
+    android:id="@+id/txtNoteText"
+    android:layout_width="wrap_content"
+    android:layout_height="150dp"
+    android:ems="10"
+    android:hint="@string/note_content"
+    android:gravity="top|left"
+    android:inputType="textMultiLine"
+    android:overScrollMode="always"
+    android:scrollbarStyle="insideInset"
+    android:scrollbars="vertical"
+    android:lines="6"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:scrollHorizontally="false"/>
+
+    <Spinner
+        android:ems="10"
+        android:id="@+id/categorySelect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:prompt="@string/category_select_prompt" />
+
+<Button
+    android:id="@+id/btnCreateNote"
+    android:layout_width="212dp"
+    android:layout_height="wrap_content"
+    android:text="@string/note_create_btn"/>
+
+</LinearLayout>
