--- a/android/app/src/main/res/layout/fragment_create_note.xml
+++ b/android/app/src/main/res/layout/fragment_create_note.xml
@@ -38,10 +38,27 @@ tools:context="com.pokeme.fragments.CreateNoteFragment">
         android:layout_height="wrap_content"
         android:prompt="@string/category_select_prompt" />
 
+    <EditText
+        android:id="@+id/txtReminderDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/reminder_date"
+        android:ems="10"
+        android:inputType="date" />
+
+    <EditText
+        android:id="@+id/txtReminderTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/reminder_time"
+        android:ems="10"
+        android:inputType="time" />
+
 <Button
     android:id="@+id/btnCreateNote"
     android:layout_width="212dp"
     android:layout_height="wrap_content"
     android:text="@string/note_create_btn"/>
+
 
 </LinearLayout>
