initial card view

--- a/android/app/src/main/res/layout/tab_notes.xml
+++ b/android/app/src/main/res/layout/tab_notes.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/notes_list"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_notes_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
